# cxx-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/contents/: cxx_macro_syntax.md
docs/contents/macro/: cxx_macro_syntax.md  cxx_macro_usage.md
docs/contents/meta/: cxx_meta_class.md  cxx_meta_conception.md  cxx_meta_constexpr.md  cxx_meta_traits.md
docs/contents/template/: cxx_citation_forward_universal.md  cxx_template_class.md  cxx_template_conception.md  cxx_template_para_crtp.md  cxx_template_standard_lib.md  cxx_template_stardard_transmit.md
include/ponder/generics/cls/: cls.hpp  conception.h  para.h  vari.h
include/ponder/generics/func/: func.hpp
include/ponder/generics/meta/: traits.h
include/ponder/macro/: autoget_set.hpp  toolkits.hpp
